<?xml version="1.0"?>
<package format="3">
  <name>lidar_imu_sync</name>
  <version>0.0.1</version>
  <description>LiDAR-IMU time synchronization node</description>

  <maintainer email="leokim0503@kw.ac.kr">kgh</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
